--- a/index.html
+++ b/index.html
@@ -306,8 +306,14 @@
         </div>
       </div>
     </section>
-<div class="container text-right">
+<div class="container text-center">
+	<ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+		    <a>goquest.online является проектом Креативной социальной лаборатории ThinkUP.social</a>
+		    </li>
+		<li>
         <a class="nav-link js-scroll-trigger" href="http://thinkup.social">©2018 ThinkUP.social</a>
+			</li>
 </div>
 
     <!-- Bootstrap core JavaScript -->
