--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Будем на связи!</h2>
             <hr class="my-4">
-            <p class="mb-5">Goquest.online является проектом Креативной социальной лаборатории ThinkUP.social</br>Мы открыты для Ваших заказов, идей, предложений сотрудничества и позитива!</br>Не стесняйтесь выходить на связь!</p>
+            <p class="mb-5">Goquest.online является проектом Креативной социальной лаборатории ThinkUP.social<br>Мы открыты для Ваших заказов, идей, предложений сотрудничества и позитива!<br>Не стесняйтесь выходить на связь!</p>
           </div>
         </div>
         <div class="container text-center">
