--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Сейчас в игре</h2>
             <hr class="my-4">
-            <p class="text-muted mb-5" align="justify">Ближайший квест "Колдовское озеро" пройдет с 21 по 28 апреля 2018г. Организатор - Пермский Фонд развития предпринимательства. Ты сможешь научиться азам предпринимательства, управляя рыбацкой базой. Если будешь успешен, твою базу может посетить Президент! Регистрация с 14 апреля.</p>
-  <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Вперед на квест</a>
+            <p class="text-muted mb-5" align="justify">Открыта регистрация на квест "Колдовское озеро", который пройдет с 21 по 28 апреля 2018г. Организатор - Пермский Фонд развития предпринимательства. Научись азам предпринимательства, управляя рыбацкой базой. Если будешь успешен, твою базу может посетить Президент!</p>
+  <a class="btn btn-primary btn-xl js-scroll-trigger" href="a.goquest.online">Вперед на квест</a>
           </div>
         </div>
 </div>
