--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2 class="section-heading">Сейчас в игре</h2>
             <hr class="my-4">
             <p class="text-muted mb-5" align="justify">Открыта регистрация на квест "Колдовское озеро", который пройдет с 21 по 28 апреля 2018г. Организатор - Пермский Фонд развития предпринимательства. Научись азам предпринимательства, управляя рыбацкой базой. Если будешь успешен, твою базу может посетить Президент!</p>
-  <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://a.goquest.online">Вперед на квест</a>
+  <a class="btn btn-primary btn-xl js-scroll-trigger" href="http://a.goquest.online/register">Вперед на квест</a>
           </div>
         </div>
 </div>
