--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Сейчас в игре</h2>
             <hr class="my-4">
-            <p class="text-muted mb-5" align="justify">Открыта регистрация на квест "Колдовское озеро", который пройдет с 21 по 28 апреля 2018г. Организатор - Пермский Фонд развития предпринимательства. Научись азам предпринимательства, управляя рыбацкой базой. Если будешь успешен, твою базу может посетить Президент!</p>
-  <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://bit.ly/2qvkunD">Вперед на квест</a>
+            <p class="text-muted mb-5" align="justify">Открыта регистрация на квест "Э2651", который пройдет с 25 по 30 мая 2018г. Организатор - Республиканский центр СПИД, Башкортостан. Этот квест про то, как избежать ВИЧ. Войди и стань одним из героев комикса!</p>
+  <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://b.goquest.online">Вперед на квест</a>
           </div>
         </div>
 </div>
