--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h2 class="section-heading">Сейчас в игре</h2>
             <hr class="my-4">
             <p class="text-muted mb-5" align="justify">Открыта регистрация на квест "Э2651", который пройдет с 25 по 30 мая 2018г. Организатор - Республиканский центр СПИД, Башкортостан. Этот квест про то, как избежать ВИЧ. Войди и стань одним из героев комикса!</p>
-  <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://b.goquest.online">Вперед на квест</a>
+  <a class="btn btn-primary btn-xl js-scroll-trigger" href="http://b.goquest.online">Вперед на квест</a>
           </div>
         </div>
 </div>
