--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Сейчас в игре</h2>
             <hr class="my-4">
-            <p class="text-muted mb-5" align="justify">Открыто прохождение квеста "Э2651", который продлится с 25 по 30 ноября 2018г. Организатор - Республиканский центр СПИД, Башкортостан. Этот квест про то, как избежать ВИЧ. Войди и стань одним из героев комикса!</p>
+            <p class="text-muted mb-5" align="justify">Скоро окроется прохождение второй серии квеста "Э2651", который продлится с 24 по 25 октября 2019г. Организатор - Республиканский центр СПИД, Башкортостан. Этот квест про то, как избежать ВИЧ. Войди и стань одним из героев комикса!</p>
   <a class="btn btn-primary btn-xl js-scroll-trigger" href="http://b.goquest.online">Вперед на квест</a>
           </div>
         </div>
